Revert "Merge branch 'main' into dev"
This reverts commit 28953795ae08528e210233ba3e0c467ae5148ac0, reversing
changes made to 92c08a6eeadd2d8e3834a54715450f89e1f966d1.