@@ -1,43 +1,75 @@
-package ru.dgritsenko.bam.bank;
+package ru.dgritsenko.bank;
 
+import ru.dgritsenko.datastorage.DataStorage;
+
+import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
  * Сервис для управления банковскими счетами и транзакциями.
  */
 public class BankService {
-    private final List<Account> accounts = new ArrayList<>();
+    private final DataStorage dataStorage;
+    private final List<Account> accounts;
 
     // -----------------------------------------------------------------------------------------------------------------
     // CONSTRUCTORS
     // -----------------------------------------------------------------------------------------------------------------
 
     /**
-     * Создает новый счет, добавляет в список и возвращает его.
-     *
-     * @return созданный счет.
-     *
-     * @throws NullPointerException если {@code holderName} равен {@code null}
-     * @throws IllegalArgumentException если {@code holderName} имеет неверный формат
+     * Создает сервис банковского приложения и загружает сохраненные данные.
      */
-    public Account createAccount(String holderName) {
-        Account account = new Account(holderName);
-        accounts.add(account);
-        return account;
+    public BankService(DataStorage dataStorage) {
+        this.dataStorage = dataStorage;
+        this.accounts = new ArrayList<>();
     }
 
     // -----------------------------------------------------------------------------------------------------------------
     // GETTERS
     // -----------------------------------------------------------------------------------------------------------------
 
-    /**
-     * Возвращает копию списка всех счетов.
-     *
-     * @return список счетов.
-     */
     public List<Account> getAccounts() {
-        return List.copyOf(accounts);
+        return Collections.unmodifiableList(accounts);
+    }
+
+    // -----------------------------------------------------------------------------------------------------------------
+    // METHODS. MAIN
+    // -----------------------------------------------------------------------------------------------------------------
+
+    /**
+     * Загружает данные списка счетов в {@code accounts}.
+     *
+     * @throws IOException если произошла ошибка ввода-вывода при чтении файла
+     * @throws ClassNotFoundException если класс объекта в файле не найден
+     */
+    public void loadAccounts() throws IOException, ClassNotFoundException {
+        List<Account> loadedAccounts = dataStorage.loadAccounts();
+        accounts.addAll(loadedAccounts);
+    }
+
+    /**
+     * Сохраняет данные списка счетов {@code accounts}.
+     *
+     * @throws IOException если произошла ошибка ввода-вывода при записи файла
+     */
+    public void saveAccounts() throws IOException {
+        dataStorage.saveAccounts(accounts);
+    }
+
+    /**
+     * Создает новый счет, добавляет в список и возвращает его.
+     *
+     * @return созданный счет
+     *
+     * @throws NullPointerException если {@code holderName} равен {@code null}
+     * @throws IllegalArgumentException если {@code holderName} имеет неверный формат
+     */
+    public Account createAccount(String holderName) {
+        Account account = new Account.Builder().setHolderName(holderName).build();
+        accounts.add(account);
+        return account;
     }
 
     // -----------------------------------------------------------------------------------------------------------------
@@ -60,7 +92,7 @@ public class BankService {
     /**
      * Возвращает количество счетов в {@code accounts}.
      *
-     * @return количество счетов.
+     * @return количество счетов
      */
     public int getNumberOfAccounts() {
         return accounts.size();
